# 8-games

./: 4 x 4 Tic-Tac-Toe.h  5 x 5 Tic Tac Toe.h  CMakeLists.txt  Four-in-a-row.h  Game1 without AI V1.cpp  Game1.cpp  Game4.cpp  LICENSE  Menu.cpp  MinMaxPlayer.h  MinMaxPlayer3.h  MinMaxPlayer6.h  MinMax_player3.h  MinMaxplayer6.h  Misere Tic Tac Toe.h  Numerical Tic-Tac-Toe.h  Problem3.h  Problem7.h  Pyramid Tic-Tac-Toe.cpp  Pyramid Tic-Tac-Toe.h  README.md  SUS.h  Ultimate Tic Tac Toe.h  Word Tic-Tac-Toe.h  Word.cpp  Word.h  main Numerical.h  main Ultimate.h  main misere.h  main sus.h  main.cpp  main2.cpp  main3.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main_4x4.h  main_5x5.h  main_Four_In_A_Row.h  (+8 more)
