cmake_minimum_required(VERSION 3.29)
project(CS213__A2_S_5_6_Task2345_B_20230391_20231180_20231232)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(CS213__A2_S_5_6_Task2345_B_20230391_20231180_20231232
    "4 x 4 Tic-Tac-Toe.h"
    "5 x 5 Tic Tac Toe.h"
    BoardGame_Classes.h
    dic.txt
    Four-in-a-row.h
    "main misere.h"
    "main Numerical.h"
    "main sus.h"
    "main Ultimate.h"
    main_4x4.h
    main_5x5.h
    main_Four_In_A_Row.h
    main_Pyramid.h
    main_word.h
    Menu.cpp
    "Misere Tic Tac Toe.h"
    "Numerical Tic-Tac-Toe.h"
    "Pyramid Tic-Tac-Toe.h"
    SUS.h
    "Ultimate Tic Tac Toe.h"
    "Word Tic-Tac-Toe.h"
        MinMaxplayer6.h
        MinMax_player3.h)
